--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.5",
     "ethers": "^6.13.2",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
