--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "name": "express-api",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
