--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "express-api",
   "version": "0.1.0",
   "private": true,
+  "scripts": {
+    "app": "node app.js"
+  },
   "dependencies": {
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
