--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,4 @@ JWT_SECRET=your key for jwt
 PRIVATE_KEY_MAIN_ACCOUNT=private key address main wallet
 WALLET_ACCOUNT=main account address wallet
 TOKEN_ADDRESS= address start contact
-PROVIDER_URL=youre URl Provider
+PROVIDER_URL=your URl Provider
