push code env update

--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,5 @@ JWT_SECRET=your key for jwt
 
 PRIVATE_KEY_MAIN_ACCOUNT=private key address main wallet
 WALLET_ACCOUNT=main account address wallet
-TOKEN_ADDRESS= address start contact
+TOKEN_ADDRESS= address smart contact
 PROVIDER_URL=your URl Provider
